--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/DmF_SY_Camp.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/DmF_SY_Camp.yml
@@ -175,7 +175,7 @@ AkkareMazeHint_001: |
   Though I am alone, I need to work hard
   enough for both Tauro and myself.
 CampFireHint_0034: |
-  Linkette makes ready use of the <0 Type='3' Data='0000'/>jump slash<0 Type='3' Data='ffff'/>,
+  Rinkuru makes ready use of the <0 Type='3' Data='0000'/>jump slash<0 Type='3' Data='ffff'/>,
   leaping into the air and swinging his
   weapon down with a practiced ease.
   All crew members should be diligent in
@@ -213,7 +213,7 @@ AkkareMazeHint_002: |
   home. Allowing him to continue our trek
   in his condition may have proved fatal.
   But what exactly is this strange gloom?<0 Type='4'/>More importantly, have they found the
-  princess and her swordsman, who delved
+  princess and her knight, who delved
   beneath Hyrule Castle to investigate it?
   I can only pray for their safety.
 CampFireHint_0022: |
