--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/DmT_BZ_BossIn.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/DmT_BZ_BossIn.yml
@@ -14,7 +14,7 @@ DmT_BZ_BossIn_Text_000_b: |
 DmT_BZ_BossIn_Text_001_b: |
   I have been waiting for you to arrive.
 DmT_BZ_BossIn_Text_002_b: |
-  Now, Linkette... There is something here I want to
+  Now, Rinkuru... There is something here I want to
   show you.
 DmT_BZ_BossIn_Text_003_b: |
   What do you think?
@@ -31,7 +31,7 @@ DmT_BZ_BossIn_Text_008_b: |
 DmT_BZ_BossIn_Text_009_b: |
   will be the last thing you ever see.
 DmT_BZ_BossIn_Text_012_b: |
-  The fabled swordsman who endured my corruption...
+  The fabled knight who endured my corruption...
   Who has persisted in slaughtering my servants...
 DmT_BZ_BossIn_Text_013_b: |
   Interesting... How is it that you survived my attack?
