--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GE_0025.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GE_0025.yml
@@ -48,8 +48,8 @@ Dm_GE_0025_Text_005_b: |
   Secret stones... Artifacts that amplified the abilities of
   those who carried them.
 Dm_GE_0025_Text_018_c: |
-  When that time comes, you must help Linkette. He is a
-  noble swordsman who will fight that monster.
+  When that time comes, you must help Rinkuru. She is a
+  noble knight who will fight that monster.
 Dm_GE_0025_Text_005_c: |
   We faced the Demon King but only after Rauru gave
   us the secret stones.
