--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GO_0021.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GO_0021.yml
@@ -34,7 +34,7 @@ Dm_GO_0021_Text_037_b: |
   the Sage of Fire will awaken again.
 Dm_GO_0021_Text_038_b: |
   The Goron sage and the Goron people will fight
-  alongside your swordsman.
+  alongside your knight.
 Dm_GO_0021_Text_020_c: |
   And to fight the Demon King, Rauru trusted us with
   secret stones.
@@ -51,10 +51,10 @@ Dm_GO_0021_Text_032_c: |
   The magic restraining the Demon King will be undone.
   He will return.
 Dm_GO_0021_Text_033_c: |
-  When that time comes, a noble swordsman named
-  Linkette will oppose him.
+  When that time comes, a noble knight named
+  Rinkuru will oppose him.
 Dm_GO_0021_Text_034_c: |
-  But Linkette will need help. Lend him your power...
+  But Rinkuru will need help. Lend him your power...
   Your fire... The Goron's mastery of fire!
 Dm_GO_0021_Text_036_c: |
   I'd like nothing more than to smash the
