--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GO_0022.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GO_0022.yml
@@ -10,4 +10,4 @@ Dm_GO_0022_Text_003_b: |
   Take up my secret stone and honor the pledge I made
   to the Sage of Time long ago.
 Dm_GO_0022_Text_004_b: |
-  Fight alongside the swordsman Linkette...
+  Fight alongside the knight Rinkuru...
