--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_RT_0022.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_RT_0022.yml
@@ -55,10 +55,10 @@ Dm_RT_0022_Text_013_c: |
 Dm_RT_0022_Text_014_c: |
   It was another of the six sages—the Sage of Time.
 Dm_RT_0022_Text_017_c: |
-  When that time comes, a noble swordsman named
-  Linkette will oppose him.
+  When that time comes, a noble knight named
+  Rinkuru will oppose him.
 Dm_RT_0022_Text_018_c: |
-  But Linkette will only succeed with the Rito's help.
+  But Rinkuru will only succeed with the Rito's help.
   Summon the winds, and support this hero!
 Dm_RT_0022_Text_014_d: |
   Some time later...
