--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZN_0015.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZN_0015.yml
@@ -1,5 +1,5 @@
 Dm_ZN_0015_Text_022_b: |
-  Linkette... Zelda's chosen protector...
+  Rinkuru... Zelda's chosen protector...
 Dm_ZN_0015_Text_023_b: |
   My name is Mineru. I am the
   Sage of Spirit.
@@ -18,5 +18,5 @@ Dm_ZN_0015_Text_028_b: |
   I would ask you to visit each of them and
   assemble a body for me.
 Dm_ZN_0015_Text_029_b: |
-  This is my request to you, Linkette, loyal
-  swordsman to Zelda.
+  This is my request to you, Rinkuru, loyal
+  guardian to Zelda.
