--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZN_0039.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZN_0039.yml
@@ -24,7 +24,7 @@ Dm_ZN_0039_Text_020_c: |
   Very well, then. As a Zonai, I bear my share of blame
   for these events...
 Dm_ZN_0039_Text_022_ab: |
-  For the swordsman Linkette, I will do everything I can.
+  For the knight Rinkuru, I will do everything I can.
 Dm_ZN_0039_Text_005_c: |
   Over time, the Master Sword is able to absorb sacred
   power. It can heal itself and even grow stronger!
@@ -52,7 +52,7 @@ Dm_ZN_0039_Text_010_c: |
   You mean...
 Dm_ZN_0039_Text_018_d: |
   I want to restore the Master Sword and deliver it
-  to Linkette!
+  to Rinkuru!
 Dm_ZN_0039_Text_020_ac: |
   
 Dm_ZN_0039_Text_003_c: |
