--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZO_0033.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZO_0033.yml
@@ -11,4 +11,4 @@ Dm_ZO_0033_Text_003_b: |
   You must take up my secret stone and honor the vow
   I made to the Sage of Time.
 Dm_ZO_0033_Text_004_b: |
-  Fight alongside the swordsman Linkette.
+  Fight alongside the knight Rinkuru.
