--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/FldObj_RockZoraRelief.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/FldObj_RockZoraRelief.yml
@@ -40,7 +40,7 @@ ZoraRelief_Mess_08: |
   to plague Zora's Domain, a distinguished
   yet humble lady paid us a visit.
   This young woman who appeared with
-  Linkette at her side was none other Princess
+  Rinkuru at her side was none other Princess
   Zelda of the royal family of Hyrule.
   "I beg forgiveness," she said earnestly.
   "Because of the royal family, Princess
@@ -278,22 +278,22 @@ ZoraRelief_Mess_05: |
   One dark day, the domain was in great
   peril, and I sought help from a traveling
   Hylian to save our home.
-  He was sparing with his words, yet I
-  trusted him at once. As fate would have
-  it, he was a childhood friend of Mipha's.
+  She was sparing with her words, yet I
+  trusted her at once. As fate would have
+  it, she was a childhood friend of Mipha's.
   My father, King Dorephan, troubled by the
-  domain's suffering, requested his help.
-  The swordsman agreed without hesitation.
+  domain's suffering, requested her help.
+  The knight agreed without hesitation.
   Father bequeathed my sister's Zora armor
   to this courageous soul, along with her
   hopes for the safety of the domain.
-  The armor fit Linkette perfectly—so perfectly
+  The armor fit Rinkuru perfectly—so perfectly
   that councilman Muzu, who then harbored
   a hatred of Hylians, could not object.
   My sister had already left this world, and
   with her went the dearly held intentions
   she had instilled in that special armor.
-  Yet, with Linkette's help, she shined a light on
+  Yet, with Rinkuru's help, she shined a light on
   the Zora in our hour of need, reaching
   between worlds with gentle fingertips.
 ZoraRelief_Mess_06: |
@@ -307,12 +307,12 @@ ZoraRelief_Mess_06: |
   beast away, but as the Zora are weak to
   electricity, our efforts were futile.
   That is when a lone Hylian arrived at the
-  domain. This swordsman who was sparing
-  with his words...his name was Linkette.
-  Unlike us Zora, he was immune to shocks!
+  domain. This knight who was sparing
+  with his words...his name was Rinkuru.
+  Unlike us Zora, she was immune to shocks!
   Well, perhaps that is an exaggeration, but
-  one thing is certain. He was very brave.
-  After careful preparation, he ascended
+  one thing is certain. She was very brave.
+  After careful preparation, she ascended
   Ploymus Mountain and defeated the foul
   beast all by himself.
   As if in celebration of the newfound
@@ -337,7 +337,7 @@ ZoraRelief_Mess_06: |
   on another monument.
 ZoraRelief_Mess_07: |
   Learnings of the Zora, Part Seven
-  The Prince and the Swordsman
+  The Prince and the Knight
   As told by Prince Sidon
   The rain always stops...except when it
   does not. This humorous saying was once
@@ -354,11 +354,11 @@ ZoraRelief_Mess_07: |
   When all had given up hope, I, Sidon,
   took it upon myself to invite a Hylian
   to the domain.
-  This young swordsman of few words was
-  named Linkette. I trusted him at once,
+  This young knight of few words was
+  named Rinkuru. I trusted her at once,
   sensing great devotion in his kind eyes.
   It was immediately clear that my instincts
-  were correct. Thanks to Linkette, we were
+  were correct. Thanks to Rinkuru, we were
   able to face the threat head on.
   Our battle with the source of the disaster
   was intense, but my newfound friend and I
@@ -366,15 +366,15 @@ ZoraRelief_Mess_07: |
   Sometimes, written words flow so much
   more readily than those spoken...
   
-  Linkette, my dearest friend, you are an
-  unparalleled swordsman, and I admire
+  Rinkuru, my dearest friend, you are an
+  unparalleled knight, and I admire
   you so very much.
-  He may lack fins and gills, but it matters
+  She may lack fins and gills, but it matters
   not. This hero among heroes exudes
   magnificence tempered with steadiness.
   Though we are different, our hearts both
   yearn to serve a higher calling. I learned
-  much from him, and am eternally grateful.
+  much from her, and am eternally grateful.
   As I recall my best friend, it occurs to me
   that though the rains have ceased,
   perhaps a true adventure never does.
