--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_NewsPaper001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_NewsPaper001.yml
@@ -111,7 +111,7 @@ Talk1501: |
   Are Now Active.<0 Type='4'/>"The Skyview Towers, developed by
   eminent researcher Purah and built in
   every region, now light up our skies!
-  "The brave swordsman Linkette was the first
+  "The brave knight Rinkuru was the first
   to soar overhead via a tower's launching
   platform!"
   <3 Type='0' Data='0b00'/>So that's what those huge things are. I'd
@@ -302,7 +302,7 @@ Talk_01: |
 Talk1151: |
   <3 Type='0' Data='0700'/>"Impending Clash with the Demon King!<0 Type='4'/>"The Master Sword, legendary blade, has
   been recovered. The future of Hyrule is in
-  Linkette's hands!"
+  Rinkuru's hands!"
 Talk3004: |
   <3 Type='0' Data='0700'/>Oh! There's an update on the "Cooking
   Class on Princess's Recipe Postponed"
@@ -359,7 +359,7 @@ Talk1153: |
   <3 Type='0' Data='0c00'/>To cause something like the Upheaval...
   This Demon King must be a really
   scary guy.
-  I hope the Goddess Hylia protects Linkette...
+  I hope the Goddess Hylia protects Rinkuru...
 Talk3006: |
   <3 Type='0' Data='0700'/>Oh! There's an update on the "Horror in
   Hyrule. Unknown Terror Lurks" story
@@ -394,13 +394,13 @@ Talk3007: |
   Stable" story from earlier...
   "The mysterious, aid-seeking woman was
   actually a member of the Yiga Clan
-  attempting to trap the swordsman Linkette."
+  attempting to trap the knight Rinkuru."
   <3 Type='0' Data='0100'/><4 Type='0' Data='0c004c0061007500670068005300'/>The more I read about the Yiga Clan, the
   dumber they seem. Do any of their plans
   ever work out?
   And of all people, did they really think
   they could trick someone like Princess
-  Zelda's faithful swordsman, Linkette?
+  Zelda's faithful swordsman, Rinkuru?
 Talk3013: |
   <3 Type='0' Data='0700'/>What's this? It's not an article...<0 Type='4'/>"Princess Zelda, We Will Never Give Up."<0 Type='4'/>Ah, I see. It's a kind of declaration!<0 Type='4'/>"The Lucky Clover Gazette has diligently
   investigated many stories related to
