--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_OasisStep_A.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_OasisStep_A.yml
@@ -8,9 +8,9 @@ talk0000: |
   Really, the only way into jail is to <0 Type='3' Data='0000'/>break
   our rules<0 Type='3' Data='ffff'/>.
   
-  voe and unauthorized outsiders are normally not allowed inside our
-  town—the one in jail broke that rule, so
-  he's locked up.
+  voe and unauthorized outsiders are normally not
+  allowed inside our town—the one in jail broke that
+  rule, so he's locked up.
   And, even though you have permission
   to be here, if you break the rules...
   
