--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Rito_Postman_001.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_Rito_Postman_001.yml
@@ -150,14 +150,14 @@ Talk_0009: |
 Enokida_01: |
   News flash! This kid's odd.
 Talk_0027: |
-  <3 Type='0' Data='0c00'/>Linkette, you say?<5 Type='1'/> Hold on there...<5 Type='0'/> Really,
-  your name is Linkette?
+  <3 Type='0' Data='0c00'/>Rinkuru, you say?<5 Type='1'/> Hold on there...<5 Type='0'/> Really,
+  your name is Rinkuru?
   
   <3 Type='0' Data='0b01'/>Hey, buddy...
   
   
   <3 Type='0' Data='0800'/><4 Type='0' Data='12004c0061007500670068004c005f0030003000'/>You've got the same name as that
-  famous swordsman.<5 Type='1'/> Ha, good for you!<5 Type='1'/>
+  famous knight.<5 Type='1'/> Ha, good for you!<5 Type='1'/>
   Pretty big name to live up to though.<5 Type='1'/>
   <3 Type='0' Data='0700'/>I'm <0 Type='3' Data='0000'/>Penn<0 Type='3' Data='ffff'/>, by the way. I work for the
   <0 Type='3' Data='0000'/>Lucky Clover Gazette<0 Type='3' Data='ffff'/>.
