--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis016.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis016.yml
@@ -13,7 +13,7 @@ talk0000: |
   class. You are a foreigner, after all...
 talk0010: |
   <3 Type='0' Data='0800'/><4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/>Hey! So...<5 Type='0'/>does your arm have those neat
-  designs on it because you're a voe?
+  designs on it because you're a foreigner?
   
   I'm learning about voe from Ms. Ashai...
   
@@ -126,7 +126,7 @@ talk0018: |
 near0000: |
   I'm going to be late!
 talk0009: |
-  <3 Type='0' Data='0700'/><4 Type='0' Data='16004700720065006500740069006e0067005f0030003100'/>Listen up, voe...<5 Type='0'/> You shouldn't go poking
+  <3 Type='0' Data='0700'/><4 Type='0' Data='16004700720065006500740069006e0067005f0030003100'/>Listen up, outsider...<5 Type='0'/> You shouldn't go poking
   your nose into Gerudo life.
   
   You're free to come and go as you wish,
