--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis017.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis017.yml
@@ -1,5 +1,5 @@
 talk0010: |
-  <3 Type='0' Data='0801'/><4 Type='0' Data='12004c00610075006700680053005f0030003000'/>Hey! You're a vai, aren't you?
+  <3 Type='0' Data='0801'/><4 Type='0' Data='12004c00610075006700680053005f0030003000'/>Hey! You're a outsider, aren't you?
   
   
   So the rumors were true! There is a new vai
