--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis020.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis020.yml
@@ -51,11 +51,11 @@ talk0019: |
   <3 Type='0' Data='0b00'/><4 Type='0' Data='18005300750072007000720069007300650053005f0030003000'/>What? But if you didn't rent one...
   
   
-  <FontSize Value='80'/><0 Type='3' Data='0200'/>No, he couldn't have found a wild one. The
+  <FontSize Value='80'/><0 Type='3' Data='0200'/>No, she couldn't have found a wild one. The
   sand shroud has made it almost impossible
   to track them down...
-  Does that mean he walked?<5 Type='1'/> Ha, that's even harder
-  to believe than him finding a wild sand seal!<0 Type='3' Data='ffff'/>
+  Does that mean she walked?<5 Type='1'/> Ha, that's even harder
+  to believe than her finding a wild sand seal!<0 Type='3' Data='ffff'/>
   
   <3 Type='0' Data='0701'/><FontSize Value='100'/>Oh, you Hylians! Are all of you such
   pranksters?<FontSize Value='80'/><FontSize Value='100'/>
