--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis026.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis026.yml
@@ -79,7 +79,7 @@ Talk_PreChallenge02: |
   No abs!<5 Type='1'/>
   
   
-  Not a vai!<5 Type='1'/>
+  Not a Gerudo!<5 Type='1'/>
   
   
   <FontSize Value='100'/><3 Type='0' Data='0c01'/>I am not in the habit of allowing strangers to
