--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Obj_DiaryAssassin_A_01.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Obj_DiaryAssassin_A_01.yml
@@ -14,7 +14,7 @@ Talk_001: |
   supplies and intel.
   Though we haven't yet received any word
   of Zelda, there have been many reported
-  sightings of her swordsman, Linkette.
+  sightings of her knight, Rinkuru.
   His days are numbered, though, as the
   surface division is setting up a network
   of their terrifying banana traps.
