--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/SecretBase_MiniGame.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/SecretBase_MiniGame.yml
@@ -13,12 +13,12 @@ Talk_00_2: |
   <3 Type='0' Data='0701'/>Now,<5 Type='1'/> newcomer,<5 Type='1'/> Zelda's disappearance
   has provided us with an opportunity to
   crush Hyrule's spirit once and for all.
-  <4 Type='0' Data='10005400680069006e006b005f0030003100'/>But her "appointed swordsman," Linkette, is
+  <4 Type='0' Data='10005400680069006e006b005f0030003100'/>But her "appointed knight," Rinkuru, is
   still out there, alive and kicking. Stubborn
   little wretch...
-  Hence our intensive training. He's a
+  Hence our intensive training. She's a
   formidable warrior, and we'll all need
-  to hone our skills to take him down.
+  to hone our skills to take her down.
   <4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/>If you value your life, I recommend you do
   the same, blademaster title or no.
   
@@ -26,7 +26,7 @@ Talk_00_2: |
 Talk_15: |
   <3 Type='0' Data='0c01'/>If you're this talented...you might
   be an even match for that nefarious
-  swordsman Linkette!
+  knight Rinkuru!
 Talk_44: |
   <3 Type='0' Data='0700'/>Hey there, newcomer.<5 Type='1'/> Have you made
   some room in your pouch?<0 Type='4'/>Then it's time at last for you to receive
@@ -91,10 +91,10 @@ Talk_26: |
   again when you've got some money.
 Talk_27: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='1000480061007000700079005f0030003000'/>Be ever diligent in your training.
-  For Linkette's defeat <5 Type='0'/>and the honor
+  For Rinkuru's defeat <5 Type='0'/>and the honor
   of Master Kohga alike!
 Near_00: |
-  Linkette must fall!
+  Rinkuru must fall!
 Talk_28: |
   <3 Type='0' Data='0701'/>Watching you fight, it seems like you
   could take down six Yiga members next.
@@ -106,11 +106,11 @@ Talk_00: |
   its spirit, <5 Type='0'/>which gives us the perfect
   opportunity to bring it to its knees.
   <4 Type='0' Data='0a005400680069006e006b00'/>The only problem is her stubborn little
-  "appointed swordsman," Linkette. We've
-  received reports that he still lives.
-  I hate to admit it, but he's a formidable
+  "appointed swordsman," Rinkuru. We've
+  received reports that she still lives.
+  I hate to admit it, but she's a formidable
   foe. <5 Type='0'/>We'll all need to hone our skills if
-  we hope to take him down.
+  we hope to take her down.
   <4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/>If you value your life, then you should do
   some training yourself.
   
@@ -265,7 +265,7 @@ Talk_11: |
   THAT, of course.
 Talk_41: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='0a0041006e00670072007900'/>Attack the newcomer as if he were
-  Linkette himself! For Master Kohga!
+  Rinkuru himself! For Master Kohga!
 Talk_12: |
   <3 Type='0' Data='0700'/><4 Type='0' Data='0a0041006e00670072007900'/>Where are you going, you fool?! <5 Type='1'/>You're
   still in the middle of training!
