--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GE_0026.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_GE_0026.yml
@@ -7,7 +7,7 @@ Dm_GE_0026_Text_003_b: |
   you must take up my secret stone and honor the vow
   I made to the Sage of Time long ago.
 Dm_GE_0026_Text_004_b: |
-  Fight alongside the swordsman Linkette...
+  Fight alongside the knight Rinkuru...
 Dm_GE_0026_Text_000_c: |
   And now I have told you all I can of the Imprisoning
   War and of our people's destiny...
