--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_RT_0023.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_RT_0023.yml
@@ -7,7 +7,7 @@ Dm_RT_0023_Text_003_b: |
   You must take up my secret stone and honor the
   Sage of Time's request.
 Dm_RT_0023_Text_004_b: |
-  Fight the Demon King with the swordsman Linkette.
+  Fight the Demon King with the knight Rinkuru.
 Dm_RT_0023_Text_000_c: |
   And now you know about the Imprisoning War and a
   mission I accepted on our behalf.
