--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZO_0032.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Dm_ZO_0032.yml
@@ -33,7 +33,7 @@ Dm_ZO_0032_Text_021_b: |
   the Zora Sage of Water will awaken once more.
 Dm_ZO_0032_Text_022_b: |
   The Zora people and their sage will fight alongside
-  your swordsman.
+  your knight.
 Dm_ZO_0032_Text_004_c: |
   To fight the Demon King, Rauru entrusted us with
   secret stones.
@@ -50,7 +50,7 @@ Dm_ZO_0032_Text_016_c: |
   The magic restraining the Demon King will eventually
   be undone.
 Dm_ZO_0032_Text_017_c: |
-  When that happens, a noble swordsman, named Linkette,
+  When that happens, a noble knight, named Rinkuru,
   will oppose him.
 Dm_ZO_0032_Text_018_c: |
   We must help. Lend him your power... He will need
