--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis011.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis011.yml
@@ -129,7 +129,7 @@ talk0024: |
   I said before?
   
   My granddaughter still has a lot to learn
-  before she can talk to a voe. How about
+  before she can talk to outsiders. How about
   leaving her be?
 talk0011: |
   <FontSize Value='80'/><3 Type='0' Data='0a00'/>It's no use. I can't hear anything they're saying
@@ -200,4 +200,4 @@ talk0019: |
 near0020: |
   My big sister...
 talk0007: |
-  <3 Type='0' Data='0b00'/><4 Type='0' Data='1800530075007200700072006900730065004c005f0030003000'/>Aaah! A voe!
+  <3 Type='0' Data='0b00'/><4 Type='0' Data='1800530075007200700072006900730065004c005f0030003000'/>Aaah! A stranger!
